add custom blue hover state

--- a/styles/glDatePicker.custom.css
+++ b/styles/glDatePicker.custom.css
@@ -94,7 +94,7 @@
 .gldp-custom .fri:hover,
 .gldp-custom .sat:hover,
 .gldp-custom .sun:hover {
-	background: #eee;
+	background: #2B72FF;
 }
 
 /* Non-Selectable days */
