--- a/styles/glDatePicker.custom.css
+++ b/styles/glDatePicker.custom.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:500,300);
+
 .gldp-custom {
 	position: absolute;
 	font-family: 'helvetica';
